[package]
name = "pam_kanidm"
version = "1.1.0-alpha.3"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2018"

[lib]
name = "pam_kanidm"
crate-type = [ "cdylib" ]
path =  "src/lib.rs"

[dependencies]
kanidm_unix_int = { path = "../", version = "1.1.0-alpha" }
futures = "0.3"
tokio = { version = "0.2", features=["full"] }
libc = "0.2"
