[package]
name = "pam_kanidm"
version = "1.1.0-alpha.8"
authors = ["William Brown <william@blackhats.net.au>"]
rust-version = "1.59"
edition = "2021"
links = "pam"

[lib]
name = "pam_kanidm"
crate-type = [ "cdylib" ]
path =  "src/lib.rs"

[dependencies]
kanidm_unix_int = { path = "../" }
libc = "^0.2.124"

[build-dependencies]
pkg-config = "^0.3.25"
