[package]
name = "pam_kanidm"
links = "pam"

version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "pam_kanidm"
crate-type = [ "cdylib" ]
path =  "src/lib.rs"

[dependencies]
kanidm_unix_int.workspace = true
libc.workspace = true

[build-dependencies]
pkg-config.workspace = true
