[package]
name = "kanidm"
version = "1.1.0-alpha.8"
authors = ["William Brown <william@blackhats.net.au>"]
rust-version = "1.59"
edition = "2021"
license = "MPL-2.0"
description = "Kanidm Server Library and Binary"
documentation = "https://docs.rs/kanidm/latest/kanidm/"
homepage = "https://github.com/kanidm/kanidm/"
repository = "https://github.com/kanidm/kanidm/"

[lib]
name = "kanidm"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1.12.0", features = ["tokio1"] }
async-trait = "^0.1.53"
base64 = "^0.13.0"
chrono = "^0.4.19"
compact_jwt = "^0.2.1"
compiled-uuid = "0.1.2"
concread = "^0.3.7"
dyn-clone = "^1.0.6"
fernet = { version = "^0.1.4", features = ["fernet_danger_timestamps"] }
filetime = "^0.2.17"
futures = "^0.3.21"
futures-util = "^0.3.21"
hashbrown = { version = "0.12.2", features = ["serde", "inline-more", "ahash"] }
idlset = { version = "^0.2.4" }
kanidm_proto = { path = "../../kanidm_proto" }
lazy_static = "^1.4.0"
ldap3_proto = "^0.2.3"
libc = "^0.2.126"
libsqlite3-sys = "0.24.2"
num_enum = "^0.5.7"
openssl = "^0.10.38"
r2d2 = "^0.8.9"
r2d2_sqlite = "^0.20.0"
rand = "^0.8.5"
regex = "^1.5.6"
saffron = "^0.1.0"
serde = { version = "^1.0.138", features = ["derive"] }
serde_cbor = "^0.11.2"
serde_json = "^1.0.82"
smartstring = { version = "^1.0.1", features = ["serde"] }
smolset = "^1.3.1"
sshkeys = "^0.3.1"
tide = "^0.16.0"
time = { version = "=0.2.27", features = ["serde", "std"] }
tokio = { version = "^1.19.1", features = ["net", "sync", "time"] }
tokio-util = { version = "^0.7.3", features = ["codec"] }
toml = "^0.5.9"
touch = "^0.0.1"
tracing = { version = "^0.1.35", features = ["attributes"] }
tracing-serde = "^0.1.3"
tracing-subscriber = { version = "^0.3.14", features = ["env-filter"] }
url = { version = "^2.2.2", features = ["serde"] }
uuid = { version = "^1.1.2", features = ["serde", "v4" ] }
validator = { version = "^0.15.0", features = ["phone"] }
webauthn-rs = "^0.3.2"
zxcvbn = "^2.2.1"

# because windows really can't build without the bundled one
[target.'cfg(target_family = "windows")'.dependencies.rusqlite]
version = "^0.27.0"
features = ["bundled"]

[target.'cfg(not(target_family = "windows"))'.dependencies.rusqlite]
version = "^0.27.0"

[target.'cfg(target_family = "windows")'.dependencies]
whoami = "^1.2.1"


[target.'cfg(not(target_family = "windows"))'.dependencies]
users = "^0.11.0"


[features]
# default = [ "libsqlite3-sys/bundled", "openssl/vendored" ]

[dev-dependencies]
criterion = { version = "^0.3.5", features = ["html_reports"] }
# For testing webauthn
webauthn-authenticator-rs = "^0.3.2"

[build-dependencies]
profiles = { path = "../../profiles" }

[[bench]]
name = "scaling_10k"
harness = false

