[package]
name = "score"
version = "1.1.0-alpha.8"
authors = ["William Brown <william@blackhats.net.au>"]
rust-version = "1.59"
edition = "2021"
license = "MPL-2.0"
description = "Kanidm Server Library and Binary"
documentation = "https://docs.rs/kanidm/latest/kanidm/"
homepage = "https://github.com/kanidm/kanidm/"
repository = "https://github.com/kanidm/kanidm/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kanidm = { path = "../idm" }
kanidm_proto = { path = "../../kanidm_proto" }
libc = "^0.2.126"

uuid = { version = "^1.1.2", features = ["serde", "v4" ] }

tide = "^0.16.0"
tide-openssl = "^0.1.1"

futures-util = "^0.3.21"
tokio = { version = "^1.19.1", features = ["net", "sync", "io-util", "macros"] }
tokio-util = { version = "^0.7.3", features = ["codec"] }
tokio-openssl = "^0.6.3"
openssl = "^0.10.38"
ldap3_proto = "^0.2.3"

tracing = { version = "^0.1.35", features = ["attributes"] }
serde = { version = "^1.0.137", features = ["derive"] }
async-trait = "^0.1.53"
async-std = { version = "^1.11.0", features = ["tokio1"] }
compact_jwt = "^0.2.1"

[build-dependencies]
profiles = { path = "../../profiles" }

[dev-dependencies]
tracing-subscriber = "^0.3.11"
# tokio = { version = "1", features = ["rt", "net", "time", "macros", "sync", "signal"] }
# kanidm = { path = "../kanidmd" }
# score = { path = "../kanidmd/score" }
futures = "^0.3.21"
serde_json = "^1.0.80"
# async-std = { version = "1.6", features = ["tokio1"] }

webauthn-authenticator-rs = "^0.3.2"
oauth2_ext = { package = "oauth2", version = "^4.1.0", default-features = false }
base64 = "^0.13.0"

kanidm_client = { path = "../../kanidm_client" }
url = { version = "^2.2.2", features = ["serde"] }
reqwest = { version = "0.11.11", features=["cookies", "json", "native-tls"] }
