[package]
name = "score"
version = "1.1.0-alpha.8"
authors = ["William Brown <william@blackhats.net.au>"]
rust-version = "1.59"
edition = "2021"
license = "MPL-2.0"
description = "Kanidm Server Library and Binary"
documentation = "https://docs.rs/kanidm/latest/kanidm/"
homepage = "https://github.com/kanidm/kanidm/"
repository = "https://github.com/kanidm/kanidm/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "^1.12.0", features = ["tokio1"] }
async-trait = "^0.1.53"
compact_jwt = "^0.2.3"
futures-util = "^0.3.21"
http-types = "^2.12.0"
kanidm = { path = "../idm" }
kanidm_client = { path = "../../kanidm_client" }
kanidm_proto = { path = "../../kanidm_proto" }
ldap3_proto = "^0.2.3"
libc = "^0.2.126"
openssl = "^0.10.41"
regex = "1.5.6"
serde = { version = "^1.0.139", features = ["derive"] }
serde_json = "^1.0.82"
tide = "^0.16.0"
# I tried including brotli and it didn't work, including "default" pulls a mime-type list from the internet on build
tide-compress = { version = "0.10.4", default-features = false, features = [ "deflate", "gzip", "regex-check" ] }
tide-openssl = "^0.1.1"
tokio = { version = "^1.20.0", features = ["net", "sync", "io-util", "macros"] }
tokio-openssl = "^0.6.3"
tokio-util = { version = "^0.7.3", features = ["codec"] }
tracing = { version = "^0.1.35", features = ["attributes"] }
uuid = { version = "^1.1.2", features = ["serde", "v4" ] }

[build-dependencies]
profiles = { path = "../../profiles" }

[dev-dependencies]
tracing-subscriber = "^0.3.14"
# tokio = { version = "1", features = ["rt", "net", "time", "macros", "sync", "signal"] }
# kanidm = { path = "../kanidmd" }
# score = { path = "../kanidmd/score" }
futures = "^0.3.21"
# async-std = { version = "1.6", features = ["tokio1"] }

webauthn-authenticator-rs = "0.4.2-beta.3"
oauth2_ext = { package = "oauth2", version = "^4.1.0", default-features = false }
base64 = "^0.13.0"

url = { version = "^2.2.2", features = ["serde"] }
reqwest = { version = "0.11.11", features=["cookies", "json", "native-tls"] }
